in testing phase after merging updatesfrom mainstream VUE
git-svn-id: https://tuftsvue.svn.sourceforge.net/svnroot/tuftsvue/branches/helenoliver@11048 d66e5487-c4fa-4dda-8c8e-ca23240363c0

--- a/VUE2/src/tufts/vue/VueResources_de.properties
+++ b/VUE2/src/tufts/vue/VueResources_de.properties
@@ -1,12 +1,11 @@
 # ============================================================================================================
 # VUE German Language File
-# October 21, 2009
-#HO 28/10/2011 - replaced VUE with designVUE on labels where appropriate for this edition
+# March 30, 2011
 # ============================================================================================================
 
 info.language = Deutsch
 info.fileVersion = 1.1
-info.VUEVersion  = 3.0
+info.VUEVersion  = 3.1.1
 mapViewer.componentMenu.info.label = Info
 mapViewer.componentMenu.notes.label = Notizen (Info)
 mapViewer.componentMenu.keywords.label = Schlagworte (Info)
@@ -51,7 +50,6 @@ objectAssetTitle = Ressourcen-Inspektor
 mapInfoTabName = Info
 mapPathwayTabName = Pfad
 mapFilterTabName = Filter
-filterPanelColor = 6273A1
 nodeInfoTabname = Info
 nodeTreeTabName = Knoten-Baum
 nodeNoteTabName = Notizen
@@ -160,7 +158,7 @@ menu.edit.undo = R\u00FCckg\u00E4ngig
 menu.edit.redo = Wiederholen
 menu.edit.cut = Ausschneiden
 menu.edit.delete = L\u00F6schen
-menu.edit.paste = Ein\u00FCgen
+menu.edit.paste = Einf\u00FCgen
 menu.edit.copy = Kopieren
 menu.edit.rename = Umbenennen
 menu.edit.selectall = Alle ausw\u00E4hlen
@@ -171,13 +169,12 @@ menu.edit.reselect = Wieder ausw\u00E4hlen
 menu.edit.preferences = Einstellungen
 menu.edit.duplicate = Duplizieren
 menu.content.addnode = Knoten hinzuf\u00FCgen
-menu.content.addIBISnode=IBISKnoten hinzuf\u00FCgen
 menu.content.addtext = Text hinzuf\u00FCgen
 menu.view.zoomout = Herauszoomen
 menu.view.zoomin = Hineinzoomen
 menu.view.fitinwin = In Fenster einpassen
 menu.view.selecfitwin = Auswahl in Fenter einpassen
-menu.view.fullscreen = Ganzer Bldschirm
+menu.view.fullscreen = Ganzer Bildschirm
 menu.view.pruning = Beschneiden
 menu.view.splitscreen = Geteilter Bildschirm
 menu.view.slidethumbnails = Folien-Thumbnails
@@ -218,7 +215,7 @@ menu.content = Inhalt
 menu.pathways.editslide = Folie bearbeiten
 menu.pathways.editmasterslide = Masterfolie bearbeiten
 menu.pathways.handoutsandnotes = Handzettel und Notizen
-menu.help.vuelog = designVUE-Log
+menu.help.vuelog = VUE-Log
 menu.windiws.openrecent = Zuletzt genutzt
 menu.windows.save = Speichern
 menu.windows.saveas = Speichern als ...
@@ -302,11 +299,9 @@ presentationNotes.invalidPathway.title = Aktiver Pfad ist ung\u00FCltig
 pathways.empty.label = Der Pfad ist leer
 actions.zoomActual.label = 100% Anzeige
 dialog.title.saveaspdf = PDF speichern als
-helpMenu.feedback.label = VUE Feedback
-helpMenu.userGuide.label = VUE-Nutzerhandbuch
-helpMenu.designVUEUserGuide.label=designVUE-Nutzerhandbuch
-helpMenu.vueWebsite.label = VUE-Forum
-helpMenu.designVUEForum.label=designVUE-Forum
+helpMenu.feedback.label = Feedback
+helpMenu.userGuide.label = Nutzerhandbuch
+helpMenu.vueWebsite.label = Forum
 helpMenu.releaseNotes.label = Versionsinfo
 helpMenu.mymaps.label = Meine Maps
 repositoryexception.operationfailed = Die Suche konnte nicht abgeschlossen werden. Der Service oder die Verbindung zum Service war nicht erreichbar. 
@@ -439,8 +434,8 @@ action.makenaturalsize = Originalgr\u00F6\u00DFe
 action.editslide = Folie bearbieten
 action.undo = R\u00FCckg\u00E4ngig
 action.redo = Wiederholen
-dialog.preference.message = Die \u00C4nderung wird bei einem Neustart von designVUE wirksam
-dialog.preference.title = designVUE neu starten
+dialog.preference.message = Die \u00C4nderung wird bei einem Neustart von VUE wirksam
+dialog.preference.title = VUE neu starten
 dialog.addurlaction.message = URL pr\u00FCfen. Ressource konnte nicht hinzugef\u00FCgt werden.
 dialog.addurlaction.title = URL pr\u00FCfen
 dialog.revert.message = Es gibt keine vorherige Version der Map.
@@ -483,7 +478,7 @@ optiondialog.savechages.message = Wollen Sie die duchgef\u00FChrten \u00C4nderun
 optiondialog.savechages.title = \u00C4nderungen speichern?
 optiondialog.savechages.dontsave = Nicht speichern
 optiondialog.savechages.save = Speichern
-dialog.initfailed.message = designVUE initialisieren gescheitert
+dialog.initfailed.message = VUE initialisieren gescheitert
 dialog.activemap.message = Hier ist keine aktive Map. Bitte \u00F6ffnen Sie eine g\u00FCltige Map.
 dialog.activemap.title = Ung\u00FCltige map
 dialog.analyzeerror.message = Dieser Knoten enth\u00E4lt keine relevanten Infomationen zur Analyse 
@@ -524,7 +519,6 @@ button.resetstyle.label = Stil zur\u00FCcksetzen
 button.resetallstyle.label = Alle Folienstile zur\u00FCcksetzen
 splashscreen.title = VISUAL UNDERSTANDING ENVIRONMENT
 splashscreen.developedby = Entwickelt von Academic Technology
-splashscreen.developedby.additions=Entwickelt von Design Engineering Group
 jbutton.nodetoslide.label = vom Knoten zur Folie
 jbutton.slidetonode.label = von Folie zum Knoten
 jbutton.bothways.label = beide Richtungen synchronisieren
@@ -537,7 +531,7 @@ jbutton.relational.label = Relational
 jbutton.folder.label = Ordner
 jbutton.load.label = Laden
 pane.dataset.message = Bitte den Datensatztyp ausw\u00E4hlen
-preferencedailog.vuepreference = designVUE Einstellungen
+preferencedailog.vuepreference = VUE Einstellungen
 preferencedailog.mapdisplay = Mapanzeige
 preferencedailog.images = Bilder
 addcustomcategory.label = Eigene Kategorien hinzuf\u00FCgen
@@ -676,12 +670,12 @@ actionutil.filecorrupted.error = Speicherfehler\: Die Map kann besch\u00E4digt w
 actionutil.filecorrupted.description = Problembeschreibung
 actionutil.internalsave.title = Interner Speicherfehler
 actionutil.notifyversion.message = Die Datei %s wurde in einer neueren Version von VUE gespeichert als Sie gerade nutzen.
-actionutil.notifyversion.datamodel = Das Datenmodell der Map ist \#%d. Die derzeit genutzte Version von designVUE kann bis zum Modell \#%d nutzen.
+actionutil.notifyversion.datamodel = Das Datenmodell der Map ist \#%d. Die derzeit genutzte Version von VUE kann bis zum Modell \#%d nutzen.
 actionutil.notifyversion.savedversion = VUE-Version mit der die Map gespeichert wurde 
-actionutil.notifyversion.currentversion = Aktuell laufende Version von designVUE
-actionutil.notifyversion.vuebuilt = designVUE-Built
-actionutil.notifyversion.displaymap = Diese Version von designVUE kann die Map nicht korrekt anzeigen. Speicher
-actionutil.notifyversion.corruptmap = der Map in dieser Version von designVUE kann zu einer Besch\u00E4digug der Map f\u00FChren.
+actionutil.notifyversion.currentversion = Aktuell laufende Version von VUE
+actionutil.notifyversion.vuebuilt = VUE-Built
+actionutil.notifyversion.displaymap = Diese Version von VUE kann die Map nicht korrekt anzeigen. Speicher
+actionutil.notifyversion.corruptmap = der Map in dieser Version von VUE kann zu einer Besch\u00E4digug der Map f\u00FChren.
 actionutil.notifyversion.versionwarning = Versionswarnung %s
 actionutil.filenotfound.error = Nicht gefunden
 actionutil.filenotfound.title = Datei nicht gefunden
@@ -689,20 +683,20 @@ imagemap.mapnotsaved.error = Bildmap nicht gespeichert
 imagemap.mapnotsaved.title = Bildmap
 imagemap.fileexists.warning = png-Bild existiert bereits. \u00DCberschreiben?
 imagemap.fileexists.title = Datei existiert bereits
-openaction.mapopen.error = Die folgende Map kann mit dieser Version von designVUE nicht ge\u00F6ffnet werden.
+openaction.mapopen.error = Die folgende Map kann mit dieser Version von VUE nicht ge\u00F6ffnet werden.
 openaction.mapopen.title = Fehler beim \u00D6ffnen der Map
 openaction.mapnotfound.error = Datei nicht gefunden.
 openaction.mapnotfound.title = Map nicht gefunden
 openaction.openmapproblem.title = Problem beim \u00D6ffnen der Map
 publishdatasourceaction.title = Fehler beim Ver\u00F6ffentlichen
-rfdopenaction.openfile.error = kann in dieser designVUE Version nicht ge\u00F6ffnet werden
+rfdopenaction.openfile.error = kann in dieser VUE Version nicht ge\u00F6ffnet werden
 rfdopenaction.openfile.title = Fehler beim \u00D6ffnen der Map
 saveaction.problem = Problem %s
 saveaction.targetfiel = Zieldatei war '%s'
 saveaction.savemap.error = Fehler beim Speichern der Map
 saveaction.saveacopy = Kopie speichern
 saveaction.save = Speichern
-dialog.saveaction.message = Speichern (0) in dieser designVUE-Version verhindert das richtige \u00D6ffnen in \u00E4lteren VUE Programmversionen. Vielleicht wollen Sie die Datei unter einem anderen Namen abspeichern.
+dialog.saveaction.message = Speichern (0) in dieser VUE-Version verhindert das richtige \u00D6ffnen in \u00E4lteren VUE Programmversionen. Vielleicht wollen Sie die Datei unter einem anderen Namen abspeichern.
 dialog.saveaction.title = Versionshinweis (0)
 menu.addstylesheet = Vorlage hinzuf\u00FCgen
 menu.deleteontology = Ontologie l\u00F6schen
@@ -766,6 +760,7 @@ jlabel.noconfig = Keine Konfiguration
 jlabel.data = DATA
 jtab.data = Daten
 jtab.resource = Ressourcen
+jlabel.widgetstack=WidgetStack default vertical expander
 jlabel.searchresult = Suchergebnisse
 jlabel.underconstruction = In Bearbeitung
 jlabel.fill = f\u00FCllen
@@ -811,7 +806,7 @@ jlabel.more = <<mehr
 jlabel.less = weniger>>
 jlabel.resourcemetadata = Ressourcen-Metadaten
 jlabel.all = Alle
-jlabel.newversion = Eine neuere Version von designVUE ist verf\u00FCgbar
+jlabel.newversion = Eine neuere Version von VUE ist verf\u00FCgbar
 jlabel.assetdisplayoffline = Assetanzeige offlne
 showagaindialog.donotshow.tooltip = nicht mehr anzeigen
 vuemenubar.printvisible.tooltip = Druckfunkton anzeigen
@@ -960,8 +955,6 @@ menu.format.node.resize=Reset to minimum size
 
 menu.format.arrange.gather=Gather
 
-menu.format.layout.hierarchical=Hierarchical
-
 dialog.saveaspdf.title=Save as PDF
 dialog.save.title=Save
 
@@ -977,7 +970,7 @@ action.image.show=Show Image
 
 #Preferences window
 preferences.language.title=Language
-preferences.language.description=Language to use: this will over-ride (for designVUE only) the language chosen as the system preference.  You must restart designVUE for any change to take effect.
+preferences.language.description=Language to use: this will over-ride (for VUE only) the language chosen as the system preference.  You must restart VUE for any change to take effect.
 preferences.language.loading=Loading...
 
 pathwaytable.menu.pathway=Pathway Menu
@@ -1118,7 +1111,6 @@ button.finish.label=Finish
 button.publish.label=Publish
 
 #AOL IM Settings
-im.title = AOL Instant Messenger
 im.username=username
 im.password=password
 im.button.ignore=ignore messages
@@ -1146,17 +1138,16 @@ interactionTools.zoomMap=Fit
 interactionTools.zoomMap.toolTip=Zoom out to fit the whole map into the window.
 interactionTools.auto=Automatic
 interactionTools.auto.toolTip=Automatically zoom in to show the selected items, and out to fit the map when nothing is selected.
-interactionTools.opacity=Opacity:
-interactionTools.opacity.toolTip=Set the opacity of unselected items.
-interactionTools.depth=<html>Expand <br>Selection:</html>
+interactionTools.fade.toolTip=Set the opacity of unselected items.
 interactionTools.depth.toolTip=Expand the selection to include linked nodes to the given depth.
-interactionTools.fadeAndDepthWidget=Opacity and Expand Selection
+interactionTools.fadeWidget=Opacity
+interactionTools.depthWidget=Expand Selection
 interactionTools.zoomWidget=Zoom
 interactionTools.off=off
 
 #SEASR
 seasr.analysis.title=SEASR Analysis
-seasr.analysis.subtitle=Analyze a webpage using a Seasr flow and return results to designVUE
+seasr.analysis.subtitle=Analyze a webpage using a Seasr flow and return results to VUE
 seasr.analysis.1=1
 seasr.analysis.2=2
 seasr.analysis.3=3
@@ -1220,9 +1211,6 @@ dockWindow.contentPanel.sync.oneChangedRecord=1 record has changed since it was 
 dockWindow.contentPanel.sync.manyChangedRecords=%d records have changed since they were added to the map.
 dockWindow.contentPanel.sync.updateMap=Update Map
 
-#HO 01/11/2011
-menu.ibisimage=IBIS-Bild
-
 ############################################
 # New properties for VUE 3.0 final release #
 ############################################
@@ -1250,7 +1238,7 @@ quickImport.selectfile=Location:
 quickImport.browse=Browse
 quickImport.cancel=Cancel
 quickImport.add=Add
-quickImport.help=<html>Add content to a new designVUE map. CSV, XML, RSS, RDF, OWL files <br>and folders (images or files) are supported.  CSV, XML, and RSS files <br>will be added to the Datasets tab of the Content window.</html>
+quickImport.help=<html>Add content to a new VUE map. CSV, XML, RSS, RDF, OWL files <br>and folders (images or files) are supported.  CSV, XML, and RSS files <br>will be added to the Datasets tab of the Content window.</html>
 
 menu.format.arrange.sendtoback.tooltip=Make sure this object doesn't obscure any other object
 menu.format.arrange.bringtofront.tooltip=Raise object to the top, completely unobscured
@@ -1258,3 +1246,79 @@ menu.format.arrange.bringtofront.tooltip=Raise object to the top, completely uno
 dialog.addurl.node.title=Add URL to Node
 dialog.addurl.link.title=Add URL to Link
 dialog.addurl.label=Enter the URL to add:
+
+################################
+# New properties for VUE 3.0.1 #
+################################
+
+button.save.label=Save
+
+preferences.category.data=Data
+preferences.category.experimental=Experimental Features
+
+twitter.title =Twitter
+twitter.tabname=Twitter Visualization
+twitter.searchField=Search
+twitter.from=From
+twitter.to=To
+twitter.analysis=Analysis
+twitter.location=Location
+twitter.button.activate=Activate
+twitter.button.deactivate=Deactivate
+twitter.scatter=Scatter
+kiosk.action=Kiosk Mode
+
+im.title = AOL IM
+im.preference.description=AOL Instant Messenger is an experimental feature on the Map Info panel;  to try the feature, enable it and restart VUE.
+im.preference.message=Enable AOL Instant Messenger
+
+menu.windows.java=Java...
+dockWindow.JavaAnalysis.helpText=<b>Java Analysis</b> creates a visual cross-reference for a set of Java source files.
+analyze.java.chooseFiles=Choose Java File(s)
+analyze.java.javaAnalysis=Java Analysis
+analyze.java.noJavaClass=The file '%s' does not contain a Java class or interface to analyze.
+analyze.java.analyze=Analyze
+analyze.java.analyzeTooltip=Analyze Java File(s)
+analyze.java.stop=Stop
+analyze.java.analyzeClasses=Analyze classes
+analyze.java.analyzeInnerClasses=Including inner classes
+analyze.java.analyzeInterfaces=Analyze interfaces
+analyze.java.analyzeInnerInterfaces=Including inner interfaces
+analyze.java.error=An error occurred during Java Analysis.
+analyze.java.parsing=parsing...
+analyze.java.displaying=displaying...
+analyze.java.preference.description=Java Analysis is an experimental feature on the Analysis menu;  to try the feature, enable it and restart VUE.
+analyze.java.preference.message=Enable Java Analysis
+
+htmloutput.title=HTML Output Settings
+htmloutput.pixel.title=Pixel Dimensions
+htmloutput.ok=OK
+htmloutput.cancel=Cancel
+htmloutput.width=Width
+htmloutput.height=Height
+htmloutput.pixels=Pixels
+
+################################
+# New properties for VUE 3.0.3 #
+################################
+
+interactionTools.linkDirection.label=Links:
+interactionTools.incomingLinks=Incoming
+interactionTools.incomingLinks.toolTip=Expand the selection to include nodes which point to the selected nodes.
+interactionTools.outgoingLinks=Outgoing
+interactionTools.outgoingLinks.toolTip=Expand the selection to include nodes pointed to by the selected nodes.
+
+################################
+# New properties for VUE 3.1.1 #
+################################
+
+analyzeaction.usingopencalais=Using OpenCalais
+analyzeaction.usingalchemyapi=Using AlchemyAPI
+dialog.alchemyapikey.title=Enter AlchemyAPI key
+dialog.alchemyapikey.label=An AlchemyAPI key has not yet been configured. Would you like to enter one for use during this open application session? (Keys can be generated at alchemyapi.com.  Go to preferences to save key permanently.)
+menu.format.layout.hierarchical=Hierarchical (Radial)
+menu.format.layout.hierarchical2=Hierarchical (Tree)
+menu.format.layout.hierarchical3=Hierarchical (Inverted Tree)
+menu.view.hideLinks=Hide Links
+htmloutput.format=Image Format
+htmloutput.dimensions=Dimensions
