--- a/VUE2/src/tufts/vue/VueResources_sk.properties
+++ b/VUE2/src/tufts/vue/VueResources_sk.properties
@@ -1,13 +1,12 @@
 # ============================================================================================================
 # VUE Slovakian Language File
-# March 14, 2010
-#HO 28/10/2011 - replaced VUE with designVUE on labels where appropriate for this edition
+# March 30, 2011
 # ============================================================================================================
 
 # This section contains metadata used by VUE to identify the language and file verions
-info.language    = Slovak (Slovakia)
+info.language    = Sloven\u010dina
 info.fileVersion = 1.1
-info.VUEVersion  = 3.0
+info.VUEVersion  = 3.1.1
 
 #mapviewer component menu
 mapViewer.componentMenu.info.label=Inform\u00e1cia
@@ -68,7 +67,6 @@ objectAssetTitle=In\u0161pektor zdrojov
 mapInfoTabName=Inform\u00e1cia
 mapPathwayTabName=Cesta
 mapFilterTabName=Filter
-filterPanelColor=6273A1
 nodeInfoTabname=Inform\u00e1cia
 nodeTreeTabName=Strom uzlov
 nodeNoteTabName=Pozn\u00e1mky
@@ -288,7 +286,7 @@ menu.content=Obsah
 menu.pathways.editslide=Upravi\u0165 sn\u00edmok
 menu.pathways.editmasterslide=Upravi\u0165 hlavn\u00fd sn\u00edmok
 menu.pathways.handoutsandnotes=Prospekty a pozn\u00e1mky
-menu.help.vuelog=designVUE z\u00e1znamy
+menu.help.vuelog=VUE z\u00e1znamy
 menu.windiws.openrecent=Otvori\u0165 predo\u0161l\u00e9
 menu.windows.save=Ulo\u017ei\u0165
 menu.windows.saveas=Ulo\u017ei\u0165 ako...
@@ -345,7 +343,6 @@ menu.format.arrange.ripple=Rozhodi\u0165
 menu.format.layout.stretch=Roz\u0161\u00edri\u0165
 menu.format.layout.search=H\u013eada\u0165
 menu.format.layout.force=D\u00f4le\u017eitos\u0165 (Pln\u00fd kruh)
-menu.format.layout.hierarchical=Hierarchick\u00fd
 menu.format.align.nudgeup=\u0160\u0165uchn\u00fa\u0165 hore
 menu.format.align.nudgedown=\u0160\u0165uchn\u00fa\u0165 dole
 menu.format.align.nudgeleft=\u0160\u0165uchn\u00fa\u0165 v\u013eavo
@@ -390,8 +387,7 @@ dialog.save.title=Ulo\u017ei\u0165
 #help menu
 helpMenu.feedback.label=Sp\u00e4tn\u00e1 v\u00e4zba
 helpMenu.userGuide.label=Pr\u00edru\u010dka u\u017e\u00edvate\u013ea
-helpMenu.vueWebsite.label=VUE F\u00f3rum
-helpMenu.designVUEForum.label=designVUE F\u00f3rum
+helpMenu.vueWebsite.label=F\u00f3rum
 helpMenu.releaseNotes.label=Pozn\u00e1mky k vydaniu
 helpMenu.mymaps.label=Moje mapy
 
@@ -580,21 +576,21 @@ action.undo=Vr\u00e1ti\u0165
 action.redo=Znovu
 
 #Preference Dialog 
-dialog.preference.message=Mus\u00edte restartova\u0165 designVUE aby sa prejavili zmeny.
-dialog.preference.title=Re\u0161tartova\u0165 designVUE
+dialog.preference.message=Mus\u00edte re\u0161tartova\u0165 VUE aby sa prejavili zmeny.
+dialog.preference.title=Re\u0161tartova\u0165 VUE
 
 #Preferences window
 preferences.language.title=Jazyk
-preferences.language.description=Zvolen\u00fd jazyk: bude zmenen\u00fd jazyk. Mus\u00edte re\u0161tartova\u0165 designVUE, aby sa prejavili ak\u00e9ko\u013evek zmeny. 
+preferences.language.description=Zvolen\u00fd jazyk: bude zmenen\u00fd jazyk. Mus\u00edte re\u0161tartova\u0165 VUE, aby sa prejavili ak\u00e9ko\u013evek zmeny. 
 preferences.language.loading=Na\u010d\u00edtavam...
 
 # Application Frame Dialog
 dialog.addurlaction.message=Zle zadan\u00e1 adresa URL, zdroj nemohol by\u0165 pridan\u00fd.
 dialog.addurlaction.title=Zle zadan\u00e1 adresa URL
 dialog.revert.message=Nie je \u017eiadna ulo\u017een\u00e1 verzia tejto mapy aby ste sa k nej mohli vr\u00e1ti\u0165.
-dialog.revert.title=Can Not Revert
-dialog.checkforupdatesaction.message=There are no resource updates available at this time
-dialog.checkforupdatesaction.title=Update Resources
+dialog.revert.title=Nebolo mo\u017en\u00e9 vr\u00e1ti\u0165 sa
+dialog.checkforupdatesaction.message=Nie s\u00fa dostupn\u00e9 \u017eiadne aktualiz\u00e1cie zdrojov
+dialog.checkforupdatesaction.title=Aktualizova\u0165 zdroje
 
 # Class @ LocalFileDataSource
 dialog.export.message=Mapa nem\u00f4\u017ee by\u0165 exportovan\u00e1
@@ -642,7 +638,7 @@ optiondialog.savechages.message=Chcete ulo\u017ei\u0165 zmeny, ktor\u00e9 ste ur
 optiondialog.savechages.title=Ulo\u017ei\u0165 zmeny?
 optiondialog.savechages.dontsave=Neulo\u017ei\u0165
 optiondialog.savechages.save=Ulo\u017ei\u0165
-dialog.initfailed.message=Sp\u00fa\u0161\u0165anie designVUE zlyhalo
+dialog.initfailed.message=Sp\u00fa\u0161\u0165anie VUE zlyhalo
 
 #Action
 dialog.activemap.message=Nie je akt\u00edvna \u017eiadna mapa, pros\u00edm, otvorte platn\u00fa mapu.
@@ -710,7 +706,7 @@ button.resetstyle.label=Znovunastavi\u0165 \u0161t\u00fdl
 button.resetallstyle.label=Znovunastavi\u0165 \u0161t\u00fdly v\u0161etk\u00fdch sn\u00edmkov
 
 #SplashScreen
-splashscreen.title=VISUAL UNDERSTANDING ENVIRONMENT (Prostredie Vizu\u00e1lneho Ch\u00e1pania)
+splashscreen.title=Prostredie Vizu\u00e1lneho Ch\u00e1pania
 splashscreen.developedby=Vytvoren\u00e9 Akademickou technol\u00f3giou
 
 #SyncDialog
@@ -730,7 +726,7 @@ jbutton.load.label=Nahra\u0165
 pane.dataset.message=Pros\u00edm vyberte druh inform\u00e1ci\u00ed
 
 #PreferenceDailog
-preferencedailog.vuepreference=designVUE Nastavenia
+preferencedailog.vuepreference=VUE Nastavenia
 preferencedailog.mapdisplay=Zobrazenie mapy
 preferencedailog.images=Obr\u00e1zky
 
@@ -831,6 +827,23 @@ searchgui.select=Vybra\u0165
 searchgui.cluster=Zoskupi\u0165
 searchgui.copynewmap=Kop\u00edrova\u0165 do novej mapy
 searchgui.newmap=nov\u00e1 mapa
+searchgui.search=H\u013eada\u0165
+searchgui.basic=Z\u00e1kladn\u00e9
+searchgui.advanced=Roz\u0161\u00edren\u00e9
+searchgui.showoptions=Uk\u00e1za\u0165 vo\u013eby
+searchgui.searchtype=H\u013eada\u0165 typ:
+searchgui.maps=Mapy:
+searchgui.results=V\u00fdsledky:
+searchgui.and=a
+searchgui.or=alebo
+searchgui.savesearch=Ulo\u017e h\u013eadanie
+searchgui.savedsearches=Ulo\u017een\u00e9 h\u013eadania
+searchgui.runsearch=Spusti h\u013eadanie
+searchgui.resetmap=Znovunastavenie mapy
+searchgui.save=Ulo\u017ei\u0165
+searchgui.delete=Zmaza\u0165
+searchgui.rename=Premenova\u0165
+searchgui.entersearchname=Pros\u00edm zadajte h\u013eadan\u00e9 meno
 
 #OntologyChooser
 ontology.step1of2=Krok 1 z 2 - Prida\u0165 ontol\u00f3giu
@@ -889,12 +902,12 @@ actionutil.filecorrupted.error=Chyba ukladania; s\u00fabor mapy m\u00f4\u017ee b
 actionutil.filecorrupted.description=Popis probl\u00e9mu
 actionutil.internalsave.title=Vn\u00fatorn\u00e1 chyba ukladania
 actionutil.notifyversion.message=S\u00fabor %s bol ulo\u017eeny v nov\u0161ej verzii programu VUE ako m\u00e1te teraz.
-actionutil.notifyversion.datamodel=Model \u00fadajov v tejto mape je #%d, a t\u00e1to verzia programu designVUE pozn\u00e1 iba po model #%d.
+actionutil.notifyversion.datamodel=Model \u00fadajov v tejto mape je #%d, a t\u00e1to verzia programu VUE pozn\u00e1 iba po model #%d.
 actionutil.notifyversion.savedversion=Verzia programu VUE, ktor\u00e1 ulo\u017eila tento s\u00fabor
-actionutil.notifyversion.currentversion=Teraj\u0161ia spusten\u00e1 verzia programu designVUE
-actionutil.notifyversion.vuebuilt=designVUE verzia
-actionutil.notifyversion.displaymap=T\u00e1to verzia programu designVUE mo\u017eno nezobraz\u00ed mapu spr\u00e1vne. Ulo\u017eenie
-actionutil.notifyversion.corruptmap=tejto mapy v tejto (star\u0161ej) verzii programu designVUE m\u00f4\u017ee poru\u0161i\u0165 mapu.
+actionutil.notifyversion.currentversion=Teraj\u0161ia spusten\u00e1 verzia programu VUE
+actionutil.notifyversion.vuebuilt=VUE verzia
+actionutil.notifyversion.displaymap=T\u00e1to verzia programu VUE mo\u017eno nezobraz\u00ed mapu spr\u00e1vne. Ulo\u017eenie
+actionutil.notifyversion.corruptmap=tejto mapy v tejto (star\u0161ej) verzii programu VUE m\u00f4\u017ee poru\u0161i\u0165 mapu.
 actionutil.notifyversion.versionwarning=Varovanie verzie %s
 actionutil.filenotfound.error=Nen\u00e1jden\u00e9
 actionutil.filenotfound.title=S\u00fabor nen\u00e1jden\u00fd
@@ -906,7 +919,7 @@ imagemap.fileexists.warning=PNG obr\u00e1zok u\u017e existuje, chcete ho prep\u0
 imagemap.fileexists.title=S\u00fabor u\u017e existuje
 
 #OpenAction
-openaction.mapopen.error=T\u00e1to mapa nem\u00f4\u017ee by\u0165 otvoren\u00e1 v tejto verzii programu designVUE.
+openaction.mapopen.error=T\u00e1to mapa nem\u00f4\u017ee by\u0165 otvoren\u00e1 v tejto verzii programu VUE.
 openaction.mapopen.title=Chyba otv\u00e1rania mapy
 openaction.mapnotfound.error=s\u00fabor nen\u00e1jden\u00fd
 openaction.mapnotfound.title=Mapa nen\u00e1jden\u00e1
@@ -916,7 +929,7 @@ openaction.openmapproblem.title=Probl\u00e9m otv\u00e1rania mapy
 publishdatasourceaction.title=Chyba zverejnenia
 
 #RFDOpenAction
-rfdopenaction.openfile.error=nemohol by\u0165 otvoren\u00fd v tejto verzii programu designVUE.
+rfdopenaction.openfile.error=nemohol by\u0165 otvoren\u00fd v tejto verzii programu VUE.
 rfdopenaction.openfile.title=Chyba otv\u00e1rania s\u00faboru
 
 #SaveAction
@@ -925,7 +938,7 @@ saveaction.targetfiel=Cie\u013eov\u00e1 s\u00fabor bol '%s'
 saveaction.savemap.error=Bol probl\u00e9m s ukladan\u00edm mapy
 saveaction.saveacopy=Ulo\u017ei\u0165 k\u00f3piu
 saveaction.save=Ulo\u017ei\u0165
-dialog.saveaction.message=Ulo\u017eenie {0} v tejto verzii programu designVUE m\u00f4\u017ee sp\u00f4sobi\u0165 nespr\u00e1vne zobrazenie mapy v star\u0161\u00edch verzi\u00e1ch programu VUE \n .  M\u00f4\u017eete mapu ulo\u017ei\u0165 pod in\u00fdm menom.
+dialog.saveaction.message=Ulo\u017eenie {0} v tejto verzii programu VUE m\u00f4\u017ee sp\u00f4sobi\u0165 nespr\u00e1vne zobrazenie mapy v star\u0161\u00edch verzi\u00e1ch programu VUE \n .  M\u00f4\u017eete mapu ulo\u017ei\u0165 pod in\u00fdm menom.
 dialog.saveaction.title=Upozornenie verzie {0}
 
 #OntologyList
@@ -1025,7 +1038,7 @@ jtab.data=\u00dadaje
 jtab.resource=Zdroj
 jlabel.widgetstack=Zvisl\u00fd panel na Veci\u010dky
 jlabel.searchresult=V\u00fdsledky h\u013eadania
-jlabel.underconstruction=Vo v\u00fdstavbe
+jlabel.underconstruction=...vo v\u00fdstavbe
 jlabel.fill=V\u00fdpl\u0148
 jlabel.repositoryid=Zdrojov\u00e9 Id
 jlabel.name=Meno
@@ -1048,7 +1061,7 @@ jlabel.libsupportuopdate=Kni\u017enica podporuje aktualiz\u00e1ciu
 jlabel.libisreadonly=Kni\u017enica je len na \u010d\u00edtanie
 jlabel.assettype=Druhy pr\u00ednosov
 jlabel.searchtype=H\u013eada\u0165 druhy
-jlabel.mapobjects=/ Objekty mapy 
+jlabel.mapobjects=Objekty mapy 
 jlabel.repositoryinstance=Vybra\u0165 zdroj
 jlabel.selectworkspace=Vybra\u0165 pracovn\u00fd priestor v 
 jlabel.publishas=Uverejni\u0165 ako
@@ -1069,7 +1082,7 @@ jlabel.more=<< viac
 jlabel.less=menej >>
 jlabel.resourcemetadata=Meta\u00fadaje o zdroji
 jlabel.all=V\u0161etky
-jlabel.newversion=Je dostupn\u00e1 nov\u00e1 verzia programu designVUE
+jlabel.newversion=Je dostupn\u00e1 nov\u00e1 verzia programu VUE
 jlabel.assetdisplayoffline=Odpoji\u0165 zobrazenie
 showagaindialog.donotshow.tooltip=Op\u00e4\u0165 nezobrazova\u0165 
 vuemenubar.printvisible.tooltip=Vytla\u010di\u0165 vidite\u013en\u00e9
@@ -1254,13 +1267,12 @@ button.finish.label=Dokon\u010den\u00e9
 button.publish.label=Zverejni\u0165
 
 #AOL IM Settings
-im.title = AOL Instant Messenger
-im.username=n\u00e1zov u\u017e\u00edvate\u013ea
-im.password=heslo
-im.button.ignore=ignorova\u0165 informa\u010dn\u00e9 spr\u00e1vy
-im.button.login=pripoji\u0165
-im.button.logout=odpoji\u0165
-im.button.approve = schv\u00e1li\u0165 prispievate\u013eov
+im.username=Meno u\u017e\u00edvate\u013ea
+im.password=Heslo
+im.button.ignore=Ignorova\u0165 informa\u010dn\u00e9 spr\u00e1vy
+im.button.login=Pripoji\u0165
+im.button.logout=Odpoji\u0165
+im.button.approve =Schv\u00e1li\u0165 prispievate\u013eov
 im.login.error.title=IM slu\u017eba zlyhala
 im.login.error.message=IM zlyhalo s nasleduj\u00facim popisom
 im.approve.title=Schv\u00e1li\u0165 prispievate\u013ea
@@ -1282,11 +1294,10 @@ interactionTools.zoomMap=Prisp\u00f4sobi\u0165
 interactionTools.zoomMap.toolTip=Zmen\u0161i\u0165 a prisp\u00f4sobi\u0165 cel\u00fa mapu do okna.
 interactionTools.auto=Automaticky
 interactionTools.auto.toolTip=Automaticky zv\u00e4\u010d\u0161i\u0165 vybran\u00e9 polo\u017eky alebo zmen\u0161i\u0165 mapu, ak nie je ni\u010d vybran\u00e9.
-interactionTools.opacity=Priesvitnos\u0165:
-interactionTools.opacity.toolTip=Nastavi\u0165 priesvitnos\u0165 nevybran\u00fdch polo\u017eiek.
-interactionTools.depth=<html>Roz\u0161\u00edri\u0165 <br>V\u00fdber:</html>
+interactionTools.fade.toolTip=Nastavi\u0165 priesvitnos\u0165 nevybran\u00fdch polo\u017eiek.
 interactionTools.depth.toolTip=Roz\u0161\u00edri\u0165 v\u00fdber, aby zah\u0155\u0148al prepojen\u00e9 uzly na uveden\u00fa h\u013abku.
-interactionTools.fadeAndDepthWidget=V\u00fdber priesvitnosti a roz\u0161\u00edrenia
+interactionTools.fadeWidget=Priesvitnos\u0165
+interactionTools.depthWidget=Roz\u0161\u00edri\u0165 V\u00fdber
 interactionTools.zoomWidget=Zv\u00e4\u010d\u0161enie
 interactionTools.off=vypnut\u00fd
 
@@ -1383,7 +1394,7 @@ quickImport.selectfile=Umiestnenie:
 quickImport.browse=Prehliada\u0165
 quickImport.cancel=Zru\u0161i\u0165
 quickImport.add=Prida\u0165
-quickImport.help=<html>Prida\u0165 obsah novej designVUE mape. S\u00fabory CSV, XML, RSS, RDF, OWL <br>a prie\u010dinky (obr\u00e1zky alebo s\u00fabory) s\u00fa podporovan\u00e9. CSV, XML a RSS s\u00fabory <br>bud\u00fa pridan\u00e9 do tabu\u013eky \u00fadajov Okna osahu.</html>
+quickImport.help=<html>Prida\u0165 obsah novej VUE mape. S\u00fabory CSV, XML, RSS, RDF, OWL <br>a prie\u010dinky (obr\u00e1zky alebo s\u00fabory) s\u00fa podporovan\u00e9. CSV, XML a RSS s\u00fabory <br>bud\u00fa pridan\u00e9 do tabu\u013eky \u00fadajov Okna osahu.</html>
 
 menu.format.arrange.sendtoback.tooltip=Uistite sa, \u010di tento objekt nezakr\u00fdva in\u00fd objekt
 menu.format.arrange.bringtofront.tooltip=Zdvihn\u00fa\u0165 objekt na vrch, \u00faplne nezakryt\u00fd
@@ -1391,3 +1402,79 @@ menu.format.arrange.bringtofront.tooltip=Zdvihn\u00fa\u0165 objekt na vrch, \u00
 dialog.addurl.node.title=Prida\u0165 adresu URL uzlu
 dialog.addurl.link.title=Prida\u0165 adresu URL prepojeniu
 dialog.addurl.label=Vlo\u017ete adresu URL:
+
+################################
+# New properties for VUE 3.0.1 #
+################################
+
+button.save.label=Ulo\u017ei\u0165
+
+preferences.category.data=\u00dadaje
+preferences.category.experimental=Experiment\u00e1lne funkcie
+
+twitter.title =Twitter
+twitter.tabname=Twitter Vizualiz\u00e1cia
+twitter.searchField=H\u013eada\u0165
+twitter.from=Od
+twitter.to=Do
+twitter.analysis=Anal\u00fdza
+twitter.location=Miesto
+twitter.button.activate=Aktivova\u0165
+twitter.button.deactivate=Deaktivova\u0165
+twitter.scatter=Rozpt\u00fdli\u0165
+kiosk.action=M\u00f3d "Kiosk"
+
+im.title = AOL IM
+im.preference.description=AOL Chatovac\u00ed klient je ako experiment\u00e1lna funkcia na paneli inform\u00e1ci\u00ed o mape; pre jeho vysk\u00fa\u0161anie zapnite t\u00fato vo\u013ebu v nastaveniach a re\u0161tartujte program VUE.
+im.preference.message=Zapn\u00fa\u0165 AOL Chatovac\u00ed klient
+
+menu.windows.java=Java...
+dockWindow.JavaAnalysis.helpText=<b>Java Anal\u00fdza</b> vytvor\u00ed vizu\u00e1lny kr\u00ed\u017eov\u00fd odkaz pre s\u00fabor zdrojov Java.
+analyze.java.chooseFiles=Vybra\u0165 zdrojov\u00e9 s\u00fabory Java.
+analyze.java.javaAnalysis=Java Anal\u00fdza
+analyze.java.noJavaClass=S\u00fabor '%s' neobsahuje relevantn\u00fd obsah pre anal\u00fdzu.
+analyze.java.analyze=Analyzova\u0165
+analyze.java.analyzeTooltip=Analyzova\u0165 Java s\u00fabor(y)
+analyze.java.stop=Zastav
+analyze.java.analyzeClasses=Analyzova\u0165 triedy
+analyze.java.analyzeInnerClasses=Zahrn\u00fa\u0165 vn\u00fatorn\u00e9 triedy
+analyze.java.analyzeInterfaces=Analyzuj rozhrania
+analyze.java.analyzeInnerInterfaces=Zahrn\u00fa\u0165 vn\u00fatorn\u00e9 rozhrania
+analyze.java.error=Stala sa chyba po\u010das Java anal\u00fdzy.
+analyze.java.parsing=analyzujem...
+analyze.java.displaying=zobrazujem...
+analyze.java.preference.description=Java anal\u00fdza je experiment\u00e1lna funkcia dostupn\u00e1 v ponuke anal\u00fdzy; pre jej vysk\u00fa\u0161anie povo\u013ete experiment\u00e1lne funkcie v nastaveniach a re\u0161tartujte program VUE.
+analyze.java.preference.message=Zapn\u00fa\u0165 Java anal\u00fdzu
+
+htmloutput.title=HTML v\u00fdstup - Nastavenia
+htmloutput.pixel.title=Rozmery bodu
+htmloutput.ok=OK
+htmloutput.cancel=Zru\u0161i\u0165
+htmloutput.width=\u0160\u00edrka
+htmloutput.height=V\u00fd\u0161ka
+htmloutput.pixels=Body
+
+################################
+# New properties for VUE 3.0.3 #
+################################
+
+interactionTools.linkDirection.label=Prepojenia:
+interactionTools.incomingLinks=Prij\u00edman\u00e9
+interactionTools.incomingLinks.toolTip=Roz\u0161\u00edrte v\u00fdber pre zahrnutie uzlov, ktor\u00e9 poukazuj\u00fa na vybran\u00e9 uzly.
+interactionTools.outgoingLinks=Posielan\u00e9
+interactionTools.outgoingLinks.toolTip=Roz\u0161\u00edrte v\u00fdber pre zahrnutie uzlov, na ktor\u00e9 poukazuj\u00fa vybran\u00e9 uzly.
+
+################################
+# New properties for VUE 3.1.1 #
+################################
+
+analyzeaction.usingopencalais=Pou\u017e\u00edvam OpenCalais
+analyzeaction.usingalchemyapi=Pou\u017e\u00edvam AlchemyAPI
+dialog.alchemyapikey.title=Vlo\u017ete AlchemyAPI k\u013e\u00fa\u010d
+dialog.alchemyapikey.label=AlchemyAPI k\u013e\u00fa\u010d nebol nastaven\u00fd. Chcete nejak\u00fd vlo\u017ei\u0165, aby sa pou\u017eil v tomto seden\u00ed? (K\u013e\u00fa\u010de m\u00f4\u017eu by\u0165 generovan\u00e9 na str\u00e1nke alchemyapi.com. Pre trval\u00e9 ulo\u017eenie k\u013e\u00fa\u010da cho\u010fte do nastaven\u00ed).
+menu.format.layout.hierarchical=Hierarchick\u00fd (Kruhov\u00fd)
+menu.format.layout.hierarchical2=Hierarchick\u00fd (Strom)
+menu.format.layout.hierarchical3=Hierarchick\u00fd (Invertovan\u00fd strom)
+menu.view.hideLinks=Skry\u0165 prepojenia
+htmloutput.format=Form\u00e1t obr\u00e1zku
+htmloutput.dimensions=Rozmeny
