--- a/VUE2/src/tufts/vue/VueResources_es_ES.properties
+++ b/VUE2/src/tufts/vue/VueResources_es_ES.properties
@@ -1,13 +1,12 @@
 # ============================================================================================================
 # VUE Spanish Language File
-# October 21, 2009
-#HO 28/10/2011 - replaced VUE with designVUE on labels where appropriate for this edition
+# March 30, 2011
 # ============================================================================================================
 
 # This section contains metadata used by VUE to identify the language and file verions
 info.language    = Espa\u00f1ol
 info.fileVersion = 1.1
-info.VUEVersion  = 3.0
+info.VUEVersion  = 3.1.1
 
 #mapviewer component menu
 mapViewer.componentMenu.info.label=Informaci\u00f3n
@@ -32,9 +31,6 @@ mapViewer.componentMenu.syncMenu.all=Todos los Recursos de Nodo y Diapositiva
 mapViewer.componentMenu.format.label=Formato
 mapViewer.componentMenu.arrangeMenu.label=Ordenar
 returnToMap.label=Volver al Mapa
-
-#HO 01/11/2011
-menu.ibisimage=Imagen IBIS
 
 # Map Inspector WIndow Title
 mapInspectorTitle=Informaci\u00f3n del Mapa
@@ -65,7 +61,6 @@ objectAssetTitle=Inspector de Recursos
 mapInfoTabName=Informaci\u00f3n
 mapPathwayTabName=Camino
 mapFilterTabName=Filtro
-filterPanelColor=6273A1
 nodeInfoTabname=Informaci\u00f3n
 nodeTreeTabName=Arbol de Nodos
 nodeNoteTabName=Notas
@@ -207,7 +202,6 @@ menu.edit.reselect=Reseleccionar
 menu.edit.preferences=Preferencias 
 menu.edit.duplicate=Duplicar
 menu.content.addnode=Agregar Nodo
-menu.content.addIBISnode=Agregar Nodo IBIS
 menu.content.addtext=Agregar Texto
 menu.view.zoomout=M\u00e1s Zoom
 menu.view.zoomin=Menos Zoom
@@ -254,7 +248,7 @@ menu.content=Contenido
 menu.pathways.editslide=Editar Diapositiva
 menu.pathways.editmasterslide=Editar Diapositiva Maestra
 menu.pathways.handoutsandnotes=Hojas y notas
-menu.help.vuelog=Log designVUE
+menu.help.vuelog=Log VUE
 menu.windiws.openrecent=Abrir reciente
 menu.windows.save=Guardar
 menu.windows.saveas=Guardar como...
@@ -340,12 +334,9 @@ actions.zoomActual.label=Ver al 100%
 dialog.title.saveaspdf=Guardar PDF como
 
 #help menu
-helpMenu.feedback.label=Retroalimentaci\u00f3n VUE
-helpMenu.designVUEfeedback.label=Retroalimentaci\u00f3n designVUE
-helpMenu.userGuide.label=Gu\u00eda de Usuarios VUE
-helpMenu.designVUEUserGuide.label=Gu\u00eda de Usuarios designVUE
-helpMenu.vueWebsite.label=Foro VUE
-helpMenu.designVUEForum.label=Foro designVUE
+helpMenu.feedback.label=Retroalimentaci\u00f3n
+helpMenu.userGuide.label=Gu\u00eda de Usuarios
+helpMenu.vueWebsite.label=Foro
 helpMenu.releaseNotes.label=Notas de Versi\u00f3n
 helpMenu.mymaps.label=Mis Mapas
 
@@ -526,12 +517,12 @@ action.undo=Deshacer
 action.redo=Rehacer
 
 #Preference Dialog 
-dialog.preference.message=Debe reiniciar designVUE para que los cambios tengan efecto.
-dialog.preference.title=Reiniciar designVUE
+dialog.preference.message=Debe reiniciar VUE para que los cambios tengan efecto.
+dialog.preference.title=Reiniciar VUE
 
 #Preferences window
 preferences.language.title=Idioma
-preferences.language.description=Idioma a usar: esto por encima de (por s\u00f3lo designVUE) el idioma elegido como el sistema de preferencia. Debe reiniciar designVUE para cualquier cambio surta efecto.
+preferences.language.description=Idioma a usar: esto por encima de (por s\u00f3lo VUE) el idioma elegido como el sistema de preferencia. Debe reiniciar VUE para cualquier cambio surta efecto.
 preferences.language.loading=Cargando...
 
 # Application Frame Dialog
@@ -585,7 +576,7 @@ optiondialog.savechages.message=Desea guardad los cambios realizados a \n
 optiondialog.savechages.title=Guardar cambios?
 optiondialog.savechages.dontsave=No Guardar
 optiondialog.savechages.save=Guardar
-dialog.initfailed.message=Error al iniciar designVUE
+dialog.initfailed.message=Error al iniciar VUE
 
 #Action
 dialog.activemap.message=No hay un mapa activo, por favor abra un mapa v\u00e1lido.
@@ -668,7 +659,7 @@ jbutton.load.label=Cargar
 pane.dataset.message=Por favor seleccione un tipo de dato
 
 #PreferenceDailog
-preferencedailog.vuepreference=Preferencias de designVUE
+preferencedailog.vuepreference=Preferencias de VUE
 preferencedailog.mapdisplay=Despliegue de Mapas
 preferencedailog.images=Im\u00e1genes
 
@@ -843,12 +834,12 @@ actionutil.filecorrupted.error="Error al guardar; Archivo de mapas est\u00e1 cor
 actionutil.filecorrupted.description=Descripci\u00f3n del Problema
 actionutil.internalsave.title=Error interno al guardar
 actionutil.notifyversion.message=el archivo %s ha sido guardado con una versi\u00f3n posterior de VUE a la que se est\u00e1 utilizando.
-actionutil.notifyversion.datamodel=El modelo de datos de este mapa es #%d, y esta versi\u00f3n de designVUE s\u00f3lo entiende hasta el modelo #%d.
+actionutil.notifyversion.datamodel=El modelo de datos de este mapa es #%d, y esta versi\u00f3n de VUE s\u00f3lo entiende hasta el modelo #%d.
 actionutil.notifyversion.savedversion=Versi\u00f3n de VUE que ha guardado este archivo
-actionutil.notifyversion.currentversion=Versi\u00f3n actual de designVUE ejecut\u00e1ndose
-actionutil.notifyversion.vuebuilt=construcci\u00f3n de designVUE
-actionutil.notifyversion.displaymap=Esta versi\u00f3n de designVUE puede no mostrar el mapa correctamente. Guardando
-actionutil.notifyversion.corruptmap=Este mapa en esta versi\u00f3n de designVUE puede resultar en un mapa corrupto.
+actionutil.notifyversion.currentversion=Versi\u00f3n actual de VUE ejecut\u00e1ndose
+actionutil.notifyversion.vuebuilt=construcci\u00f3n de VUE
+actionutil.notifyversion.displaymap=Esta versi\u00f3n de VUE puede no mostrar el mapa correctamente. Guardando
+actionutil.notifyversion.corruptmap=Este mapa en esta versi\u00f3n de VUE puede resultar en un mapa corrupto.
 actionutil.notifyversion.versionwarning=Advertencia de Versi\u00f3n %s
 actionutil.filenotfound.error=No se pudo encontrar
 actionutil.filenotfound.title=Archivo no encontrado
@@ -860,7 +851,7 @@ imagemap.fileexists.warning=imagen png ya existe, reemplazar?
 imagemap.fileexists.title=Archivo ya existe
 
 #OpenAction
-openaction.mapopen.error=El siguiente mapa no puede ser abierto en la versi\u00f3n actual de designVUE.
+openaction.mapopen.error=El siguiente mapa no puede ser abierto en la versi\u00f3n actual de VUE.
 openaction.mapopen.title=Error al abrir Mapa
 openaction.mapnotfound.error=archivo no encontrado.
 openaction.mapnotfound.title=Mapa No Encontrado
@@ -870,7 +861,7 @@ openaction.openmapproblem.title=Problema al Abrir Mapa
 publishdatasourceaction.title=Error de Publicaci\u00f3n
 
 #RFDOpenAction
-rfdopenaction.openfile.error=no puede ser abierto con esta versi\u00f3n de designVUE.
+rfdopenaction.openfile.error=no puede ser abierto con esta versi\u00f3n de VUE.
 rfdopenaction.openfile.title=Error al abrir Mapa
 
 #SaveAction
@@ -879,7 +870,7 @@ saveaction.targetfiel=Archivo de destino es '%s'
 saveaction.savemap.error=Ha ocurrido un error al guardar el mapa
 saveaction.saveacopy=Guardar una copia
 saveaction.save=Guardar
-dialog.saveaction.message=Guardar {0} en esta versi\u00f3n de designVUE puede impedir que versiones anteriores de VUE \n lo abran correctamente. Tal ves prefiera guardar este mapa con un nuevo nombre.
+dialog.saveaction.message=Guardar {0} en esta versi\u00f3n de VUE puede impedir que versiones anteriores de VUE \n lo abran correctamente. Tal ves prefiera guardar este mapa con un nuevo nombre.
 dialog.saveaction.title=Aviso de Versi\u00f3n {0}
 
 #OntologyList
@@ -1005,7 +996,7 @@ jlabel.more=<< m\u00e1s
 jlabel.less=menos >>
 jlabel.resourcemetadata=Datos de Recursos
 jlabel.all=Todo
-jlabel.newversion=Una nueva versi\u00f3n de designVUE est\u00e1 disponible
+jlabel.newversion=Una nueva versi\u00f3n de VUE est\u00e1 disponible
 jlabel.assetdisplayoffline=Despliegue de Activos fuera de l\u00ednea
 showagaindialog.donotshow.tooltip=no mostrar nuevamente
 vuemenubar.printvisible.tooltip=Imprimir Vista
@@ -1199,8 +1190,6 @@ menu.format.node.resize=Reset to minimum size
 
 menu.format.arrange.gather=Gather
 
-menu.format.layout.hierarchical=Hierarchical
-
 dialog.saveaspdf.title=Save as PDF
 dialog.save.title=Save
 
@@ -1321,7 +1310,6 @@ button.finish.label=Finish
 button.publish.label=Publish
 
 #AOL IM Settings
-im.title = AOL Instant Messenger
 im.username=username
 im.password=password
 im.button.ignore=ignore messages
@@ -1349,17 +1337,16 @@ interactionTools.zoomMap=Fit
 interactionTools.zoomMap.toolTip=Zoom out to fit the whole map into the window.
 interactionTools.auto=Automatic
 interactionTools.auto.toolTip=Automatically zoom in to show the selected items, and out to fit the map when nothing is selected.
-interactionTools.opacity=Opacity:
-interactionTools.opacity.toolTip=Set the opacity of unselected items.
-interactionTools.depth=<html>Expand <br>Selection:</html>
+interactionTools.fade.toolTip=Set the opacity of unselected items.
 interactionTools.depth.toolTip=Expand the selection to include linked nodes to the given depth.
-interactionTools.fadeAndDepthWidget=Opacity and Expand Selection
+interactionTools.fadeWidget=Opacity
+interactionTools.depthWidget=Expand Selection
 interactionTools.zoomWidget=Zoom
 interactionTools.off=off
 
 #SEASR
 seasr.analysis.title=SEASR Analysis
-seasr.analysis.subtitle=Analyze a webpage using a Seasr flow and return results to designVUE
+seasr.analysis.subtitle=Analyze a webpage using a Seasr flow and return results to VUE
 seasr.analysis.1=1
 seasr.analysis.2=2
 seasr.analysis.3=3
@@ -1450,7 +1437,7 @@ quickImport.selectfile=Location:
 quickImport.browse=Browse
 quickImport.cancel=Cancel
 quickImport.add=Add
-quickImport.help=<html>Add content to a new designVUE map. CSV, XML, RSS, RDF, OWL files <br>and folders (images or files) are supported.  CSV, XML, and RSS files <br>will be added to the Datasets tab of the Content window.</html>
+quickImport.help=<html>Add content to a new VUE map. CSV, XML, RSS, RDF, OWL files <br>and folders (images or files) are supported.  CSV, XML, and RSS files <br>will be added to the Datasets tab of the Content window.</html>
 
 menu.format.arrange.sendtoback.tooltip=Make sure this object doesn't obscure any other object
 menu.format.arrange.bringtofront.tooltip=Raise object to the top, completely unobscured
@@ -1458,3 +1445,79 @@ menu.format.arrange.bringtofront.tooltip=Raise object to the top, completely uno
 dialog.addurl.node.title=Add URL to Node
 dialog.addurl.link.title=Add URL to Link
 dialog.addurl.label=Enter the URL to add:
+
+################################
+# New properties for VUE 3.0.1 #
+################################
+
+button.save.label=Save
+
+preferences.category.data=Data
+preferences.category.experimental=Experimental Features
+
+twitter.title =Twitter
+twitter.tabname=Twitter Visualization
+twitter.searchField=Search
+twitter.from=From
+twitter.to=To
+twitter.analysis=Analysis
+twitter.location=Location
+twitter.button.activate=Activate
+twitter.button.deactivate=Deactivate
+twitter.scatter=Scatter
+kiosk.action=Kiosk Mode
+
+im.title = AOL IM
+im.preference.description=AOL Instant Messenger is an experimental feature on the Map Info panel;  to try the feature, enable it and restart VUE.
+im.preference.message=Enable AOL Instant Messenger
+
+menu.windows.java=Java...
+dockWindow.JavaAnalysis.helpText=<b>Java Analysis</b> creates a visual cross-reference for a set of Java source files.
+analyze.java.chooseFiles=Choose Java File(s)
+analyze.java.javaAnalysis=Java Analysis
+analyze.java.noJavaClass=The file '%s' does not contain a Java class or interface to analyze.
+analyze.java.analyze=Analyze
+analyze.java.analyzeTooltip=Analyze Java File(s)
+analyze.java.stop=Stop
+analyze.java.analyzeClasses=Analyze classes
+analyze.java.analyzeInnerClasses=Including inner classes
+analyze.java.analyzeInterfaces=Analyze interfaces
+analyze.java.analyzeInnerInterfaces=Including inner interfaces
+analyze.java.error=An error occurred during Java Analysis.
+analyze.java.parsing=parsing...
+analyze.java.displaying=displaying...
+analyze.java.preference.description=Java Analysis is an experimental feature on the Analysis menu;  to try the feature, enable it and restart VUE.
+analyze.java.preference.message=Enable Java Analysis
+
+htmloutput.title=HTML Output Settings
+htmloutput.pixel.title=Pixel Dimensions
+htmloutput.ok=OK
+htmloutput.cancel=Cancel
+htmloutput.width=Width
+htmloutput.height=Height
+htmloutput.pixels=Pixels
+
+################################
+# New properties for VUE 3.0.3 #
+################################
+
+interactionTools.linkDirection.label=Links:
+interactionTools.incomingLinks=Incoming
+interactionTools.incomingLinks.toolTip=Expand the selection to include nodes which point to the selected nodes.
+interactionTools.outgoingLinks=Outgoing
+interactionTools.outgoingLinks.toolTip=Expand the selection to include nodes pointed to by the selected nodes.
+
+################################
+# New properties for VUE 3.1.1 #
+################################
+
+analyzeaction.usingopencalais=Using OpenCalais
+analyzeaction.usingalchemyapi=Using AlchemyAPI
+dialog.alchemyapikey.title=Enter AlchemyAPI key
+dialog.alchemyapikey.label=An AlchemyAPI key has not yet been configured. Would you like to enter one for use during this open application session? (Keys can be generated at alchemyapi.com.  Go to preferences to save key permanently.)
+menu.format.layout.hierarchical=Hierarchical (Radial)
+menu.format.layout.hierarchical2=Hierarchical (Tree)
+menu.format.layout.hierarchical3=Hierarchical (Inverted Tree)
+menu.view.hideLinks=Hide Links
+htmloutput.format=Image Format
+htmloutput.dimensions=Dimensions
