--- a/VUE2/src/tufts/vue/VueResources_hu_HU.properties
+++ b/VUE2/src/tufts/vue/VueResources_hu_HU.properties
@@ -1,13 +1,12 @@
 # ============================================================================================================
 # VUE Hungarian Language File
-# June 10, 2010
-#HO 28/10/2011 - VUE labels changed to designVUE for designVUE edition
+# March 30, 2011
 # ============================================================================================================
 
 # This section contains metadata used by VUE to identify the language and file verions
-info.language    = Hungarian
+info.language    = Magyar
 info.fileVersion = 1.1
-info.VUEVersion  = 3.0
+info.VUEVersion  = 3.1.1
 
 #mapviewer component menu
 mapViewer.componentMenu.info.label=Inform\u00e1ci\u00f3
@@ -62,7 +61,6 @@ objectAssetTitle=\u00d6sszetev\u0151k ellen\u0151rz\u00e9se
 mapInfoTabName=Inform\u00e1ci\u00f3
 mapPathwayTabName=\u00datvonal
 mapFilterTabName=Sz\u0171r\u0151
-filterPanelColor=6273A1
 nodeInfoTabname=Inform\u00e1ci\u00f3
 nodeTreeTabName=Csom\u00f3pont fa
 nodeNoteTabName=Jegyzetek
@@ -249,10 +247,7 @@ menu.content=\u00d6sszetev\u0151k
 menu.pathways.editslide=Di\u00e1k szerkeszt\u00e9se
 menu.pathways.editmasterslide=Mester dia szerkeszt\u00e9se
 menu.pathways.handoutsandnotes=K\u00e9ziratok \u00e9s jegyzetek
-#HO 28/10/2011 BEGIN **********
-#menu.help.vuelog=VUE Log
-menu.help.vuelog=designVUE Log
-#HO 28/10/2011 END **********
+menu.help.vuelog=VUE Log
 menu.windiws.openrecent=El\u0151zm\u00e9ny megnyit\u00e1sa
 menu.windows.save=Ment\u00e9s
 menu.windows.saveas=Ment\u00e9s m\u00e1sk\u00e9nt...
@@ -521,13 +516,8 @@ action.undo=Vissza
 action.redo=M\u00e9gis
 
 #Preference Dialog 
-#HO 28/10/2011 BEGIN *************
-#dialog.preference.message=\u00dajra kell ind\u00edtani a VUE-t, hogy ez a be\u00e1ll\u00edt\u00e1s \u00e9rv\u00e9nybe l\u00e9phesen.
-dialog.preference.message=\u00dajra kell ind\u00edtani a designVUE-t, hogy ez a be\u00e1ll\u00edt\u00e1s \u00e9rv\u00e9nybe l\u00e9phesen.
-#dialog.preference.title=VUE \u00fajraind\u00edt\u00e1sa
-dialog.preference.title=designVUE \u00fajraind\u00edt\u00e1sa
-#HO 28/10/2011 END *************
-
+dialog.preference.message=\u00dajra kell ind\u00edtani a VUE-t, hogy ez a be\u00e1ll\u00edt\u00e1s \u00e9rv\u00e9nybe l\u00e9phesen.
+dialog.preference.title=VUE \u00fajraind\u00edt\u00e1sa
 
 #Preferences window
 preferences.language.title=Nyelv
@@ -650,7 +640,6 @@ button.resetallstyle.label=Minden dia st\u00edlus\u00e1nak vissza\u00e1ll\u00edt
 #SplashScreen
 splashscreen.title=VISUAL UNDERSTANDING ENVIRONMENT
 splashscreen.developedby=Academic Technology fejleszt\u00e9se
-splashscreen.developedby.additions=Design Engineering Group fejleszt\u00e9se
 
 #SyncDialog
 jbutton.nodetoslide.label=Csom\u00f3pontb\u00f3l di\u00e1ba
@@ -880,7 +869,7 @@ saveaction.targetfiel=C\u00e9l f\u00e1jl '%s' volt
 saveaction.savemap.error=Hiba t\u00f6rt\u00e9nt a t\u00e9rk\u00e9p ment\u00e9s\u00e9n\u00e9l
 saveaction.saveacopy=M\u00e1solat ment\u00e9se
 saveaction.save=Ment\u00e9s
-dialog.saveaction.message={0} ment\u00e9se a designVUE jelenlegi verzi\u00f3j\u00e1ban megakad\u00e1lyozza, hogy egy kor\u00e1bbi verzi\u00f3 \n helyesen jelen\u00edtse meg. Tal\u00e1n ink\u00e1bb mentse m\u00e1s n\u00e9ven ezt a t\u00e9rk\u00e9pet.
+dialog.saveaction.message={0} ment\u00e9se a VUE jelenlegi verzi\u00f3j\u00e1ban megakad\u00e1lyozza, hogy egy kor\u00e1bbi verzi\u00f3 \n helyesen jelen\u00edtse meg. Tal\u00e1n ink\u00e1bb mentse m\u00e1s n\u00e9ven ezt a t\u00e9rk\u00e9pet.
 dialog.saveaction.title=Verzi\u00f3 megjegyz\u00e9s {0}
 
 #OntologyList
@@ -1200,8 +1189,6 @@ menu.format.node.resize=Minimaliz\u00e1l
 
 menu.format.arrange.gather=Gy\u0171jt\u00e9s
 
-menu.format.layout.hierarchical=Hierarchikus
-
 dialog.saveaspdf.title=Ment\u00e9s PDF-k\u00e9nt
 dialog.save.title=Ment\u00e9s
 
@@ -1322,7 +1309,6 @@ button.finish.label=Befejez\u00e9s
 button.publish.label=K\u00f6zz\u00e9tesz
 
 #AOL IM Settings
-im.title = AOL Instant Messenger
 im.username=Felhaszn\u00e1l\u00f3n\u00e9v
 im.password=Jelsz\u00f3
 im.button.ignore=\u00dczenetek figyelmen k\u00edv\u00fcl hagy\u00e1sa
@@ -1350,11 +1336,10 @@ interactionTools.zoomMap=Igaz\u00edt\u00e1s
 interactionTools.zoomMap.toolTip=A t\u00e9rk\u00e9p ablakhoz igaz\u00edt\u00e1sa.
 interactionTools.auto=Automatikus
 interactionTools.auto.toolTip=Automatikus nagy\u00edt\u00e1s, a kiv\u00e1lasztott elemek bemutat\u00e1s\u00e1ra, ha semmi nincs kijel\u00f6lve t\u00e9rk\u00e9p ablakra m\u00e9retez\u00e9se.
-interactionTools.opacity=\u00c1tl\u00e1tsz\u00f3s\u00e1g
-interactionTools.opacity.toolTip=A ki nem v\u00e1lasztott elemek \u00e1tl\u00e1tsz\u00f3s\u00e1g\u00e1nak be\u00e1ll\u00edt\u00e1sa.
-interactionTools.depth=<html>Kiv\u00e1laszt\u00e1s <br>kiterjeszt\u00e9se:</html>
+interactionTools.fade.toolTip=A ki nem v\u00e1lasztott elemek \u00e1tl\u00e1tsz\u00f3s\u00e1g\u00e1nak be\u00e1ll\u00edt\u00e1sa.
 interactionTools.depth.toolTip=Kiv\u00e1laszt\u00e1s kiterjeszt\u00e9se az adott t\u00e1vols\u00e1gra l\u00e9v\u0151 kapcsol\u00f3d\u00f3 csompontokra.
-interactionTools.fadeAndDepthWidget=\u00c1tl\u00e1tsz\u00f3s\u00e1g \u00e9s kiv\u00e1laszt\u00e1s kiterjeszt\u00e9se
+interactionTools.fadeWidget=\u00c1tl\u00e1tsz\u00f3s\u00e1g
+interactionTools.depthWidget=Kiv\u00e1laszt\u00e1s kiterjeszt\u00e9se
 interactionTools.zoomWidget=\u00c1tm\u00e9retez\u00e9s
 interactionTools.off=Kikapcsol\u00e1s
 
@@ -1451,7 +1436,7 @@ quickImport.selectfile=Hely:
 quickImport.browse=Tall\u00f3z\u00e1s
 quickImport.cancel=M\u00e9gsem
 quickImport.add=Hozz\u00e1ad
-quickImport.help=<html>Tartalom hozz\u00e1ad\u00e1sa egy \u00faj designVUE t\u00e9rk\u00e9phez. CSV, XML, RSS, RDF, OWL f\u00e1jlokat <br>\u00e9s mapp\u00e1kat (k\u00e9peket vagy f\u00e1jlokat) is t\u00e1mogtja.  A hozz\u00e1adott CSV, XML, \u00e9s RSS f\u00e1jlokat <br> megtal\u00e1lja az \u00d6sszetev\u0151k ablak Adathalmazok f\u00fcl\u00f6n</html>
+quickImport.help=<html>Tartalom hozz\u00e1ad\u00e1sa egy \u00faj VUE t\u00e9rk\u00e9phez. CSV, XML, RSS, RDF, OWL f\u00e1jlokat <br>\u00e9s mapp\u00e1kat (k\u00e9peket vagy f\u00e1jlokat) is t\u00e1mogtja.  A hozz\u00e1adott CSV, XML, \u00e9s RSS f\u00e1jlokat <br> megtal\u00e1lja az \u00d6sszetev\u0151k ablak Adathalmazok f\u00fcl\u00f6n</html>
 
 menu.format.arrange.sendtoback.tooltip=Gy\u0151z\u0151dj\u00f6n meg r\u00f3la, hogy ez az elem ne takarja a t\u00f6bbi elemet.
 menu.format.arrange.bringtofront.tooltip=Az el\u0151rehozott elem nincs takar\u00e1sban
@@ -1459,3 +1444,79 @@ menu.format.arrange.bringtofront.tooltip=Az el\u0151rehozott elem nincs takar\u0
 dialog.addurl.node.title=URL hozz\u00e1ad\u00e1sa egy csom\u00f3ponthoz
 dialog.addurl.link.title=URL hozz\u00e1ad\u00e1sa egy \u00f6sszek\u00f6t\u0151h\u00f6z
 dialog.addurl.label=A k\u00f6vetkez\u0151 URL hozz\u00e1ad\u00e1sa:
+
+################################
+# New properties for VUE 3.0.1 #
+################################
+
+button.save.label=Save
+
+preferences.category.data=Data
+preferences.category.experimental=Experimental Features
+
+twitter.title =Twitter
+twitter.tabname=Twitter Visualization
+twitter.searchField=Search
+twitter.from=From
+twitter.to=To
+twitter.analysis=Analysis
+twitter.location=Location
+twitter.button.activate=Activate
+twitter.button.deactivate=Deactivate
+twitter.scatter=Scatter
+kiosk.action=Kiosk Mode
+
+im.title = AOL IM
+im.preference.description=AOL Instant Messenger is an experimental feature on the Map Info panel;  to try the feature, enable it and restart VUE.
+im.preference.message=Enable AOL Instant Messenger
+
+menu.windows.java=Java...
+dockWindow.JavaAnalysis.helpText=<b>Java Analysis</b> creates a visual cross-reference for a set of Java source files.
+analyze.java.chooseFiles=Choose Java File(s)
+analyze.java.javaAnalysis=Java Analysis
+analyze.java.noJavaClass=The file '%s' does not contain a Java class or interface to analyze.
+analyze.java.analyze=Analyze
+analyze.java.analyzeTooltip=Analyze Java File(s)
+analyze.java.stop=Stop
+analyze.java.analyzeClasses=Analyze classes
+analyze.java.analyzeInnerClasses=Including inner classes
+analyze.java.analyzeInterfaces=Analyze interfaces
+analyze.java.analyzeInnerInterfaces=Including inner interfaces
+analyze.java.error=An error occurred during Java Analysis.
+analyze.java.parsing=parsing...
+analyze.java.displaying=displaying...
+analyze.java.preference.description=Java Analysis is an experimental feature on the Analysis menu;  to try the feature, enable it and restart VUE.
+analyze.java.preference.message=Enable Java Analysis
+
+htmloutput.title=HTML Output Settings
+htmloutput.pixel.title=Pixel Dimensions
+htmloutput.ok=OK
+htmloutput.cancel=Cancel
+htmloutput.width=Width
+htmloutput.height=Height
+htmloutput.pixels=Pixels
+
+################################
+# New properties for VUE 3.0.3 #
+################################
+
+interactionTools.linkDirection.label=Links:
+interactionTools.incomingLinks=Incoming
+interactionTools.incomingLinks.toolTip=Expand the selection to include nodes which point to the selected nodes.
+interactionTools.outgoingLinks=Outgoing
+interactionTools.outgoingLinks.toolTip=Expand the selection to include nodes pointed to by the selected nodes.
+
+################################
+# New properties for VUE 3.1.1 #
+################################
+
+analyzeaction.usingopencalais=Using OpenCalais
+analyzeaction.usingalchemyapi=Using AlchemyAPI
+dialog.alchemyapikey.title=Enter AlchemyAPI key
+dialog.alchemyapikey.label=An AlchemyAPI key has not yet been configured. Would you like to enter one for use during this open application session? (Keys can be generated at alchemyapi.com.  Go to preferences to save key permanently.)
+menu.format.layout.hierarchical=Hierarchikus (Radial)
+menu.format.layout.hierarchical2=Hierarchikus (Tree)
+menu.format.layout.hierarchical3=Hierarchikus (Inverted Tree)
+menu.view.hideLinks=Hide Links
+htmloutput.format=Image Format
+htmloutput.dimensions=Dimensions
