--- a/VUE2/src/tufts/vue/VueResources_ru_RU.properties
+++ b/VUE2/src/tufts/vue/VueResources_ru_RU.properties
@@ -275,6 +275,9 @@ menu.file.new=\u041d\u043e\u0432\u044b\u0439
 menu.file.revert=\u041a \u0438\u0441\u0445\u043e\u0434\u043d\u043e\u043c\u0430 \u0441\u043e\u0441\u0442\u043e\u044f\u043d\u0438\u044e
 menu.file.import=\u0418\u043c\u043f\u043e\u0440\u0442
 #HO 10/01/2012 BEGIN ********
+#HO 15/06/2012 BEGIN *****
+menu.file.lock=\u0411\u043b\u043e\u043a\u0438\u0440\u043e\u0432\u0430\u0442\u044c
+#HO 15/06/2012 END *******
 menu.file.unlock=\u0420\u0430\u0437\u0431\u043b\u043e\u043a\u0438\u0440\u043e\u0432\u0430\u0442\u044c
 menu.file.refresh=\u041e\u0431\u043d\u043e\u0432\u0438\u0442\u044c
 menu.file.quickrefresh=\u0411\u044b\u0441\u0442\u0440\u043e\u0435 \u043e\u0431\u043d\u043e\u0432\u043b\u0435\u043d\u0438\u0435
@@ -316,6 +319,9 @@ menu.windows.seasr=SEASR...
 menu.windows.conanalysis=\u0421\u0432\u044f\u0437\u043d\u043e\u0441\u0442\u044c...
 menu.windows.mergemaps=\u041e\u0431\u044a\u0435\u0434\u0438\u043d\u0438\u0442\u044c \u043a\u0430\u0440\u0442\u044b...
 menu.windows.publish=\u0417\u0430\u0433\u0440\u0430\u0437\u0438\u0442\u044c \u0432 \u0440\u0435\u043f\u043e\u0437\u0438\u0442\u043e\u0440\u0438\u0439
+#HO 14/06/2012 BEGIN *********
+menu.windows.beanshell=\u0417\u0430\u043f\u0443\u0441\u0442\u0438\u0442\u044c \u043f\u0443\u043b\u044c\u0442 Beanshell 
+#HO 14/06/2012 END *********
 menu.windows.exporthandouts=\u042d\u043a\u0441\u043f\u043e\u0440\u0442 \u043f\u0440\u0435\u0437\u0435\u043d\u0442\u0430\u0446\u0438\u0439 \u0438 \u0437\u0430\u043c\u0435\u0442\u043e\u043a (PDF)
 menu.windows.printvisible=\u041f\u0435\u0447\u0430\u0442\u044c \u0432\u0438\u0434\u0438\u043c\u043e\u0439 \u043e\u0431\u043b\u0430\u0441\u0442\u0438...
 menu.windows.formatpalette=\u041f\u0430\u043b\u0438\u0442\u0440\u0430 \u0444\u043e\u0440\u043c\u0430\u0442\u0438\u0440\u043e\u0432\u0430\u043d\u0438\u044f
