changed version number to 1.04.1.b for interim release for Evgeny Volkov.
git-svn-id: https://tuftsvue.svn.sourceforge.net/svnroot/tuftsvue/branches/helenoliver@11122 d66e5487-c4fa-4dda-8c8e-ca23240363c0

--- a/VUE2/src/tufts/vue/VueResources_ru_RU.properties
+++ b/VUE2/src/tufts/vue/VueResources_ru_RU.properties
@@ -2472,7 +2472,11 @@ vue.version=3.1.1
 vue.build.date=2003-2012
 # HO 08/07/2011 BEGIN ************
 designVUE.build.date=2010-2012
-designVUE.version=1.04.1 (beta)
+#HO 15/06/2012 BEGIN ******
+#designVUE.version=1.04.1 (beta)
+#interim release for Evgeny Volkov
+designVUE.version=1.04.1.b (beta)
+#HO 15/06/2012 END ******
 # HO 08/07/2011 END **************
 
 vue.release.url=http\u003a//vue.tufts.edu/current_release.xml
