Latest Russian translation from Evgeny Volkov.

--- a/VUE2/src/tufts/vue/VueResources_ru.properties
+++ b/VUE2/src/tufts/vue/VueResources_ru.properties
@@ -1,6 +1,6 @@
 # ============================================================================================================
 # VUE Russian Language File
-# March 30, 2011
+# April 09, 2013
 # ============================================================================================================
 
 # This section contains metadata used by VUE to identify the language and file verions
@@ -1002,7 +1002,7 @@ inspectionpane.nothingselected.tooltip=\u041d\u0438\u0447\u0435\u0433\u043e \u04
 layersui.newlayer.tooltip=\u041d\u043e\u0432\u044b\u0439 \u0441\u043b\u043e\u0439
 mapinspection.applyfilter.tooltip=\u041f\u0440\u0438\u043c\u0435\u043d\u0438\u0442\u044c \u0444\u0438\u043b\u044c\u0442\u0440
 mapinspection.disablefilter.tooltip=\u041e\u0442\u043a\u043b\u044e\u0447\u0438\u0442\u044c \u0444\u0438\u043b\u044c\u0442\u0440
-mapviewer.label.tooltip=\u0418\u043c\u044f \u0443\u0437\u043b\u0430 (\u043a\u043e\u043d\u0446\u0435\u043f\u0442\u0430)
+mapviewer.label.tooltip=\u0421\u0432\u043e\u0439\u0441\u0442\u0432\u043e \u0441\u0432\u044f\u0437\u0438
 mapviewer.analyze.node=\u0410\u043d\u0430\u043b\u0438\u0437\u0438\u0440\u043e\u0432\u0430\u0442\u044c \u0443\u0437\u0435\u043b
 datasourceviewer.name.contentdescription=\u041e\u043f\u0438\u0441\u0430\u043d\u0438\u0435 \u0441\u043e\u0434\u0435\u0440\u0436\u0438\u043c\u043e\u0433\u043e
 
