--- a/VUE2/src/tufts/vue/VueResources_de.properties
+++ b/VUE2/src/tufts/vue/VueResources_de.properties
@@ -1101,7 +1101,7 @@ dialog.mappingfile.title=XML Karten Dateifehler
 publisher.maponly=Karte nur
 publisher.mapandresources=Karte und Ressourcen
 publisher.vpk=VUE Packet (vpk)
-publisher.publishinfo0=Mit dem Ver\u00f6ffenlichen Funktion kann ein Benutzer eine Konzeptkarte in einem digitalen Repository stecken. Drucken Sie auf die andere Moden, um mehr zu lernen.
+publisher.publishinfo0=Mit der Ver\u00f6ffenlichen Funktion kann ein Benutzer eine Konzeptkarte in einem digitalen Repository ver\u00f6ffentlichen. W\u00e4hlen Sie die andere Modi, um mehr zu erfahren.
 publisher.publishinfo1=Karte nur speichern im digitalen Repository nur die Karte. Digitale Ressourcen seien nicht angeh\u00e4ngt, Die Ressourcen-Pfade bleiben noch, ob zum lokalen Rechner oder Netzwerk.
 publisher.publishinfo2=VUE Package (vpk) einbettet in der Karte digitalen Ressourcen. Alle Benutzer, die die Karte anschauen, haben auf die digitalen Ressourcen Zugriff. Dieser Modus erzeugt einen VUE Package (vpk) Datei, der zu einem digitalen Repository hochgeladen oder auf den lokalen Rechner gespeichert werden k\u00f6nnen.
 publisher.publishinfo3=Karten und Ressourcen erzeugt ein Duplikat von allen digitalen Ressourcen and l\u00e4dt diese Ressourcen und die Karte auf einen registrierten digitalen Repository hoch. Alle Benutzer, die die Karte anschauen, haben auf die Ressourcen Zugriff.
@@ -1130,7 +1130,7 @@ im.button.nodewidth=Einheitliche Knotenbreite erzwingen
 im.button.maketable=Knoten als Tabelle sortieren
 im.button.zoom=Karte bei 100% bleiben
 im.button.enforce=Begrenzen die Nummer der Spalten
-im.approve.message=Wollen Sie {0} erlauben, auf die Karte beizutragen?
+im.approve.message=Wollen Sie {0} erlauben, zur Karte beizutragen?
 
 #Interaction Tools window
 interactionTools.zoomSel.label=Auswahl:
