Fix typo in German translation
hnzufügen -> hinzufügen

--- a/VUE2/src/tufts/vue/VueResources_de.properties
+++ b/VUE2/src/tufts/vue/VueResources_de.properties
@@ -286,7 +286,7 @@ menu.format.arrange.pullin = Hineinholen
 menu.format.arrange.pushout = Herausnehmen
 actions.addPathwayItem.label = Zu Pfad hinzuf\u00fcgen
 actions.removePathwayItem.label = Vom aktiven Pfad entfernen
-actions.addkeywords = Schlagwort hnzuf\u00fcgen
+actions.addkeywords = Schlagwort hinzuf\u00fcgen
 actions.addnotes = Knoten hinzuf\u00fcgen
 pathways.defaultPathway.label = Unbenannter Pfad
 pathways.portal.label = Interaktiver Frame
